Removed visible scrollbars, updated loader, fixed button logic

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,22 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+.loader {
+  background: #222;
+  width: 100%;
+  height: 100%;
+  color: #999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader-wrapper {
+  font-size: 24px;
+  text-align: center;
+  line-height: 48px;
+}
+
 .card {
   display: block;
   width: 375px;
@@ -40,6 +56,10 @@
   transition: opacity .5s, margin .5s;
   overflow-y: auto;
   height: 100%;
+}
+
+.instructions::-webkit-scrollbar {
+  display: none;
 }
 
 .instructions-text {
@@ -82,6 +102,7 @@
   font-size: 17px;
   font-weight: bold;
   font-family: 'Montserrat', sans-serif;
+  cursor: pointer;
 }
 
 .btn.next {
